2026-01-06  G. Branden Robinson <g.branden.robinson@gmail.com>

	* m.tmac (SP, SA, TAB, MOVE, SM, HC, VERBOFF, PIC, EPIC, HM)
	(PGNH, BS, BE, VM, 1C, 2C, MC, NCOL, SK, MULB, MULN, MULE, OP)
	(FD, DE, DF, DS, TS, TH, TE, T&, PS, PY, EQ, EN, TC, FG, TB, EC)
	(EX, B, I, R, IB, BI, IR, RI, RB, BR, B1, B2, RF, APP, APPSK)
	(AU, AST, ISODATE, MT, COVER, GETST, GETHN, GETPN, GETR, IND)
	(INDP, FC, AV, AVL, IE, WE): Enable diagnostic argument dumping
	at appropriately high debugging levels (`-rD5` or greater).

2026-01-06  G. Branden Robinson <g.branden.robinson@gmail.com>

	* m.tmac (H): Throw error diagnostic if not given mandatory
	argument, or the first argument ("level") is not an arithmetic
	expression.

2025-12-23  Alexis Hildebrandt <afh@surryhill.net>

	[mm]: Fix Savannah #67857.

	Reading through mse.tmac and LT.se as a preparation to take on
	bug #65861 I noticed that the layout does not seem right (see
	attachment LT.se-before.pdf).  The main issues I notice are as
	follows.
	-  The main body text is offset very far to the right and
	   overflows the right paper edge.
	-  The lines of the main body text are not filled, i.e., line
	   breaks in the source are present in the rendered output.
	-  Once the first item is fixed, the `SVH` letter type main body
	   line length also overflows the right paper edge.

	* mse.tmac (let@init_SVH): Drop spurious `in` and `ll` requests.
	(let@print_SV): Set indentation to zero and enable filling.
	* examples/LT.se: Make both the `SVH` and `SVH` letter types
	demonstrable by adding a `lT` string to select between them
	{much the way "memorandum.mm" works}.  Update introductory
	comments.

	Fixes <https://savannah.gnu.org/bugs/?67857>.

2026-01-01  G. Branden Robinson <g.branden.robinson@gmail.com>

	Add tests of footnote area layout and vertical margins.

	* tests/footnote-area-layout-is-correct.sh:
	* tests/vertical-margins-are-correct.sh: Do it.
	* mm.am (mm_TESTS): Run tests.
