@@ -67,6 +67,7 @@ EXTRA_DIST += \
   contrib/mm/mmroff.pl
 
 mm_TESTS = \
+  contrib/mm/tests/Captc-translates.sh \
   contrib/mm/tests/LB-mark-format-works.sh \
   contrib/mm/tests/LT-BL-spaces-before-date.sh \
   contrib/mm/tests/LT-SP-AU-without-AT-works.sh \
